--- a/brewfile
+++ b/brewfile
@@ -1,4 +1,5 @@
 cask "google-chrome"
 cask "vlc"
 cask "visual-studio-code"
+cask "lbry"
 #cask "mysides" #required to set sidebar finder sidebar favorites // not working on Apple silicon
