--- a/brewfile
+++ b/brewfile
@@ -3,6 +3,6 @@ cask "google-chrome"
 cask "vlc"
 cask "visual-studio-code"
 mas "Affinity Photo", id: 824183456
-mas "IRISCompressor Pro", id: 502822609
+mas "IRISCompressor", id: 502822609
 mas "SiteSucker", id: 442168834
 mas "Telegram", 747648890
