--- a/brewfile
+++ b/brewfile
@@ -1,7 +1,10 @@
+# Applications
 cask "brave-browser"
 cask "google-chrome"
 cask "vlc"
 cask "visual-studio-code"
+
+# Mac App Store
 mas "Affinity Photo", id: 824183456
 mas "IRISCompressor", id: 502822609
 mas "SiteSucker", id: 442168834
